intTests/test_type_errors/err017.log.good
Loading file "err017.saw"
Type errors:
  err017.saw:27:11-27:12: Error: Type mismatch.
    Expected: { a : Int, b : Int }
    Found:    Int

  err017.saw:20:13-23:2: Note: The type { a : Int, b : Int } arises from this type annotation
  err017.saw:27:11-27:12: Note: The type Int arises from the type of this term


FAILED
